# ai-351

./: .gitignore  README.md  main.py  pyproject.toml  zip.ipynb
notebooks/: cantor_mex2.ipynb
working_directory/: config.py
working_directory/notebooks/: cantor_mex2.ipynb  cantor_mex3.ipynb  cantor_mex4.ipynb  cantor_mex5.ipynb  cantor_mex6.ipynb  cantor_mex7.ipynb  cantor_wrong.ipynb  create_conll.ipynb
working_directory/outputs/: mex4_crf_model.joblib
working_directory/scripts/: schwartz-conll.py  weak_label_coleridge.py
working_directory/utils/: 1000_docs_to_corpus.py  extract_json.py  mex3.py  mex4.py  own_bpe.py  trigram_lm.py
