[project]
name = "ai-351"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "joblib>=1.5.1",
    "nltk>=3.9.1",
    "numpy>=2.1.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.10.1",
    "seqeval>=1.2.2",
    "sklearn-crfsuite>=0.5.0",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.4",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu129"
