[project]
name = "ai-351"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.1",
    "en-core-web-sm",
    "fastparquet>=2024.11.0",
    "flair>=0.15.1",
    "gensim>=4.3.2",
    "joblib>=1.5.1",
    "nltk>=3.9.1",
    "numpy<2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.10.1",
    "python-crfsuite>=0.9.11",
    "seqeval>=1.2.2",
    "sklearn-crfsuite>=0.5.0",
    "smart-open[s3]>=7.3.1",
    "spacy>=3.8.7",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
gensim = { git = "https://github.com/piskvorky/gensim.git", rev = "da2f388" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
